connecting bd and adding annotations to map tables and columns

--- a/HospitalAPI/appsettings.json
+++ b/HospitalAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost;database=db_goldenfold;user=root;password=maria2424;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
