--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -20,6 +20,8 @@
     "@angular/router": "^18.0.0",
     "chart.js": "^4.4.3",
     "jest-editor-support": "*",
+    "keycloak-angular": "^16.0.1",
+    "keycloak-js": "^25.0.5",
     "ng2-charts": "^6.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
